--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="gifs-here"></div>
     <form id="gif-form">
-        <label for="gif-title">Make your own gif search</label>
+        <label class="searchRef" for="gif-title">Make your own gif search: </label>
         <input type="text" class="gif-input"><br>
   
         <!-- Button triggers new movie to be added -->
