screencastify and more styling

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
+    <title>NBA Gif Generator</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/reset.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -13,11 +13,11 @@
 <body>
     <div class="gifs-here"></div>
     <form id="gif-form">
-        <label class="searchRef" for="gif-title">Make your own gif search: </label>
+        <label class="searchRef" for="gif-title">Add a gif button! </label>
         <input type="text" class="gif-input"><br>
   
         <!-- Button triggers new movie to be added -->
-        <input class="add-gif" type="submit" value="Search">
+        <input class="add-gif" type="submit" value="Make Button">
       </form>
       <br>
     <div class="results"></div>
